add html structure and css styles

--- a/index.html
+++ b/index.html
@@ -2,13 +2,275 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,700" rel="stylesheet">
+
 </head>
 
 <body>
+    <section class="section-main">
+        <div class="hero">
+            <div class="main-nav">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <div class="main-logo">
+                                TRANS<br>LINGUS
+                            </div>
+                        </div>
+                        <div class="col-lg-9">
+                            <div class="main-menu">
+                                <div class="menu-list">
+                                    <ul>
+                                        <li>
+                                            <a href="#">O NAS</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">REFERENCJE</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">ZAUFALI NAM</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">KONTAKT</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="menu-calc">
+                                    WYCENA ON-LINE
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end SECTION MAIN -->
+
+    <section class="section-calculator">
+        <div class="container">
+            <div class="calculator">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="input-area">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="calculator-title-box">WYCENA ON-LINE</div>
+                                    <div class="calculator-text">Wklej tekst do tłumaczenia</div>
+                                    <textarea class="calculator-textarea" value="Eniam dolor sit amet...">Eniam dolor sit amet...</textarea>
+                                    <div class="calculator-text-length">Długość tekstu:
+                                        <strong class="calculator-monospace"> 6800 znaków = 4 s. </strong>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="language-select">
+                                        <div class="calculator-from-language">
+                                            Z języka:
+                                        </div>
+                                        <select class="language from">
+                                            <option value=" niemiecki ">niemiecki</option>
+                                            <option value="polski ">polski</option>
+                                            <option value="rosyjski ">rosyjski</option>
+                                            <option value="urundi ">urundi</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 ">
+                                    <div class="language-select">
+                                        <div class="calculator-to-language ">
+                                            Na język:
+                                        </div>
+                                        <select class="language to ">
+                                            <option value="polski ">polski</option>
+                                            <option value="niemiecki ">niemiecki</option>
+                                            <option value="rosyjski ">rosyjski</option>
+                                            <option value="urundi ">urundi</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 ">
+                        <div class="pricing-table ">
+                            <div class="row">
+                                <div class="pricing-table-row-header">
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-headers">Termin:</div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-headers">Zwykły</div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-headers">Pilny</div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-headers">Ekspres</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="pricing-table-row-transl">
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-transl-cell">Tłumaczenie</div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-transl-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-transl-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-transl-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="pricing-table-row-redact-lang">
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-redact-cell">+ redakcja językowa</div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-redact-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-redact-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-redact-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="pricing-table-row-redact-merit">
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-merit-cell">+ redakcja merytoryczna</div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-merit-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-merit-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="pricing-table-merit-cell">
+                                            <span class="price-net">158 zł netto</span>
+                                            <br>
+                                            <span class="price-with-vat">207 zł z VAT</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="chosen-table">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="text-explanation">
+                                        Wpisz swój adres email, wciśnij ZAMAWIAM,
+                                        <br> następnie podaj dane Twojej firmy,
+                                        <br> aby otrzymać gotową fakturę pro-forma.
+                                    </div>
+                                </div>
+                                <div class="col-lg-12">
+
+                                    <div class="row chosen">
+                                        <div class="col-lg-3">
+                                            <div class="chosen-title">WYBIERAM</div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="chosen-service">
+                                                <span class="medium-text">tłumaczenie językowe
+                                                    <br>z redakcją językową</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="chosen-time">
+                                                <span class="small-italic">czas realizacji</span>
+                                                <br>24-48 godzin</div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="chosen-price">158 zł netto
+                                                <br>
+                                                <span class="price-with-vat">207 zł z VAT</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12">
+                                    <form class="company-data" action="file:///home/marcin/Pulpit/CodersLab/ZajeciaModuly/Biuro_tlumaczen/mock_ups/default-action">
+                                        <label class="company-data-label" for="email">Podaj swój email</label>
+                                        <input class="company-data-input" name="email" type="text" placeholder="Twój email">
+                                        <label class="company-data-label" for="company">Podaj nazwę firmy</label>
+                                        <input class="company-data-input" name="company" type="text" placeholder="nazwa firmy">
+                                        <label class="company-data-label" for="NIP">Podaj NIP firmy</label>
+                                        <input class="company-data-input" name="NIP" type="text" placeholder="NIP firmy">
+                                        <label class="company-data-label" for="street">Podaj nazwę ulicy</label>
+                                        <input class="company-data-input" name="street" type="text" placeholder="Nazwa ulicy">
+                                        <label class="company-data-label" for="number">Podaj numer domu</label>
+                                        <input class="company-data-input" name="number" type="number" placeholder="Numer domu">
+                                        <label class="company-data-label" for="locale">Podaj numer lokalu</label>
+                                        <input class="company-data-input" name="locale" type="number" placeholder="Numer lokalu">
+                                    </form>
+                                </div>
+                                <div class="col-lg-12">
+                                    <div class="order-button">
+                                        ZAMAWIAM
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
 
 </body>
 
