finished html structure and css styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="main-logo">
-                                TRANS<br>LINGUS
+                                TRANS
+                                <br>LINGUS
                             </div>
                         </div>
                         <div class="col-lg-9">
@@ -45,6 +46,30 @@
                                 <div class="menu-calc">
                                     WYCENA ON-LINE
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-info">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="main-header">
+                                <h1>O NAS</h1>
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <!-- this is empty space -->
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="main-description">
+                                <p class="main-description-paragraph">Tworzymy tłumaczenia
+                                    <br>od 12 lat!
+                                    <br>Nasze doświadczenie
+                                    <br>to gwarancja
+                                    <br>Twojego zadowolenia</p>
+                                <button class="main-description-button">WIĘCEJ</button>
                             </div>
                         </div>
                     </div>
@@ -268,9 +293,150 @@
         </div>
     </section>
 
+    <section class="section-about-us">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="section-about-us-header">
+                                <h2 class="section-about-us-header-text">O NAS</h2>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="section-about-us-main-text">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, voluptate quisquam quis, fugiat porro velit itaque doloremque a at nulla quas fugit impedit! Quas sunt similique deserunt fugiat fuga corrupti! Lorem, ipsum dolor sit amet consectetur
+                            adipisicing elit. Officia, voluptate quisquam quis, fugiat porro velit itaque doloremque a at nulla quas fugit impedit! Quas sunt similique deserunt fugiat fuga corrupti! Lorem, ipsum dolor sit amet consectetur adipisicing
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/1804_opt.jpg" alt="team-hands" class="about-us-image" />
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="section-credentials">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="section-credentials-header">
+                                <h2 class="section-credentials-header-text">REFERENCJE</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="section-credentials-main-text">
+                        <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, voluptate quisquam quis, fugiat porro velit itaque doloremque. Officia, voluptate quisquam quis, fugiat porro velit itaque doloremque a at...</p>
+                        <p class="company">Firmus Concretnus</p>
+                        <p class="quote">At nulla quas fugit impedit! Cras sit amet consectetur adipisicing elit. Quas sunt similique deserunt fugiat fuga corrupti! Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="company">Aliud Corporationis</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="section-partners">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="section-partners-header">
+                                <h2 class="section-partners-header-text">ZAUFALI NAM</h2>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <img src="img/FAKE LOGO 1_bl-noBG-01.png" alt="fake-logo-1">
+                </div>
+                <div class="col-lg-2">
+                    <img src="img/FAKE LOGO 2.png" alt="fake-logo-1">
+                </div>
+                <div class="col-lg-2">
+                    <img src="img/FAKE LOGO 3-01.png" alt="fake-logo-1">
+                </div>
+                <div class="col-lg-2">
+                    <img src="img/FAKE LOGO 1_bl-noBG-01.png" alt="fake-logo-1">
+                </div>
+                <div class="col-lg-2">
+                    <img src="img/FAKE LOGO 2.png" alt="fake-logo-1">
+                </div>
+                <div class="col-lg-2">
+                    <img src="img/FAKE LOGO 3-01.png" alt="fake-logo-1">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="section-contact-header">
+                                <h2 class="section-contact-header-text">KONTAKT</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="section-contact-main-text">
+                        <p class="addres">TransLingus Biuro Tłumaczeń</p>
+                        <p class="addres">ul. Tłumaczeniowa 23</p>
+                        <p class="addres">12-345 Warszawa</p>
+                        <p class="addres">NIP:234-45-56-123</p>
+
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="section-contact-main-text">
+                        <ul>
+                            <li>
+                                <a class="contact-links" href="#">O NAS</a>
+                            </li>
+                            <li>
+                                <a class="contact-links" href="#">REFERENCJE</a>
+                            </li>
+                            <li>
+                                <a class="contact-links" href="#">ZAUFALI NAM</a>
+                            </li>
+                            <li>
+                                <a class="contact-links" href="#">KONTAKT</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="section-contact-main-text">
+                        <p class="pricing">WYCENA ON-LINE</p>
+
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="section-contact-main-text">
+                        <p class="copy">copyrights TransLingus</p>
+                        <p class="copy">code and design</p>
+                        <p class="copy">by MarcinOstaszewski</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
