add readme and part-of-page calculation

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Biuro tłumaczeń TransLingus - React</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,700" rel="stylesheet">
-
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500&amp;subset=latin-ext" rel="stylesheet">
 </head>
 
 <body>
