--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="./js/app.js"></script>
+    <script defer src="./js/app.js"></script>
 </body>
 
 </html>
