--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500&amp;subset=latin-ext" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
 </head>
 
 <body>
     <div id="app"></div>
+    
     <script defer src="./js/app.js"></script>
 </body>
 
